# trade_bot

./: README.md
execution-engine/: go.mod
execution-engine/cmd/: main.go
execution-engine/internal/exchange/: binance.go  exchange.go
execution-engine/internal/order/: order.go
execution-engine/internal/reconciliation/: reconciler.go
execution-engine/internal/stream/: aggregator.go
execution-engine/pkg/db/: db.go
exporters/: main.go
infrastructure/ci-cd/github-actions/: build.yml  deploy-staging.yml  test.yml
infrastructure/docker/: docker-compose.yml
infrastructure/monitoring/: OPERATIONS.md  alerts.yml  docker-compose.yml  prometheus.yml
infrastructure/monitoring/alertmanager/: alertmanager.yml
infrastructure/monitoring/alertmanager/templates/: telegram.tmpl
infrastructure/monitoring/loki/: loki-config.yml
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/monitoring/promtail/: promtail-config.yml
infrastructure/terraform/: kafka.tf  outputs.tf  redis.tf  timescaledb.tf  variables.tf  vault.tf
infrastructure/vault/: init.sh  policies.hcl
risk-controller/: Cargo.toml
risk-controller/src/: circuit_breaker.rs  main.rs  redis_state.rs  risk_management.rs  telegram_alerts.rs
strategy-service/: .env.example  .gitignore  LICENSE  README.md  config.py  main.py  requirements.txt
strategy-service/arbitrage/: detector.py
strategy-service/backtesting/: freqtrade_integration.py
strategy-service/trading/: paper_trading.py
synthetic_tests/: circuit_breaker_tests.py
(+4 files in other folders)
