[package]
name = "risk-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
redis = { version = "0.23.3", features = ["r2d2"] }
teloxide = { version = "0.12", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0"
anyhow = "1.0"
config = "0.13"